src/objects/Medical_Record__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MphRxDate__c</fullName>
        <description>Date assigned by MphRx</description>
        <label>MphRx Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MphRxObjectID__c</fullName>
        <description>The object ID assigned to the record by MphRx</description>
        <label>MphRxObjectID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Medical Records</relationshipLabel>
        <relationshipName>Medical_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Medical Record</label>
    <nameField>
        <label>Medical Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>